k8s/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: dolly
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
      #nodePort  ： 9000
  #type: ClusterIP
  #type: NodePort
