k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dolly-api-ingress
spec:
  rules:
    - host: api.argentiacapital.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dolly-api-service
                port:
                  number: 8000
